# server-tools

./: .gitignore  LICENSE  README.md
.github/workflows/: config-builder-ci.yml  config-builder-release.yml
config-builder/: CHANGELOG.md  README.md  cli.py  entrypoint.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config-builder/core/: __init__.py  cvar_database.py  profiles.py
config-builder/data/profiles/: cup.yaml  public.yaml  scrim.yaml
config-builder/docs/: CLI_USAGE.md  CVAR_DATABASE_SCHEMA.md  PROFILE_FORMAT.md
config-builder/src/vanguard_config_builder/: __init__.py  __main__.py  _resources.py  cli.py
config-builder/src/vanguard_config_builder/core/: cfg_generator.py  cfg_parser.py  cvar_database.py  profiles.py  validator.py
config-builder/src/vanguard_config_builder/data/: cvars.yaml
config-builder/src/vanguard_config_builder/data/profiles/: _base.yaml
config-builder/src/vanguard_config_builder/gui/: __init__.py  cfg_preview.py  main_window.py  section_panels.py
config-builder/tests/: conftest.py  test_cfg_generator.py  test_cfg_parser.py  test_cli.py  test_cvar_database.py  test_profiles.py  test_smoke.py  test_validator.py
