[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanguard-config-builder"
version = "0.1.0"
description = "Desktop GUI to generate and validate VanguardMod server.cfg files"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "wahke", email = "info@wahke.lu" },
    { name = "VanguardMod Project Contributors" },
]
keywords = ["wolfenstein", "et", "etlegacy", "vanguardmod", "server", "config"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/vanguardmod/server-tools"
Repository = "https://github.com/vanguardmod/server-tools"
Issues = "https://github.com/vanguardmod/server-tools/issues"

[project.scripts]
vanguard-config-builder = "vanguard_config_builder.cli:main"

# ---------------------------------------------------------------------------
# Setuptools layout — src/ layout (M9)
# ---------------------------------------------------------------------------
# The package lives at src/vanguard_config_builder/. Bundled YAML data
# files (cvars.yaml, profiles/*.yaml) ship as package_data so a
# `pip install` puts them next to the .py modules and the runtime
# resolver in `_resources.py` can find them. PyInstaller bundles use
# the same in-package layout via `--add-data` (see
# .github/workflows/config-builder-release.yml).

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vanguard_config_builder = ["data/*.yaml", "data/profiles/*.yaml"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
